--- a/fur.html
+++ b/fur.html
@@ -15,10 +15,12 @@
 <body>
     <div>
         <h1>Welocme to furry page!</h1>
-        <p class="name">OWO</p>
+        <p class="name">OwO</p>
 
-        <button onclick="Change()" onmouseenter="Enter()" onmouseleave="Leave()" class="magenta" title="Fox!">Fur</button>
-        <button onclick="Change2()" onmouseenter="Enter2()" onmouseleave="Leave2()" class="gray" title="ЫЫааа.">Стать фурри</button>
+        <button onclick="Change()" onmouseenter="Enter()" onmouseleave="Leave()" class="magenta"
+            title="Fox!">Fur</button>
+        <button onclick="Change2()" onmouseenter="Enter2()" onmouseleave="Leave2()" class="gray" title="ЫЫааа.">Стать
+            фурри</button>
     </div>
     <script src="index.js"></script>
 </body>
