--- a/pages/fur.html
+++ b/pages/fur.html
@@ -9,7 +9,7 @@
 
     <title>Furry</title>
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/scripts/index.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <button onclick="Change2()" onmouseenter="Enter2()" onmouseleave="Leave2()" class="gray" title="ЫЫааа.">Стать
             фурри</button>
     </div>
-    <script src="index.js"></script>
+    <script src="/scripts/index.js"></script>
 </body>
 
 </html>
