--- a/main.html
+++ b/main.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta contenteditable="false">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Furry</title>
 
-    <link rel="stylesheet" href="/scripts/index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <button onclick="Change2()" onmouseenter="Enter2()" onmouseleave="Leave2()" class="gray" title="ЫЫааа.">Стать
             фурри</button>
     </div>
-    <script src="/scripts/index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
