--- a/pages/poll.html
+++ b/pages/poll.html
@@ -1,1 +1,24 @@
 <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Poll</title>
+
+    <link rel="stylesheet" href="/scripts/index.css">
+</head>
+
+<body>
+    <div>
+        <h1>Poll of the week</h1>
+        <p class="question1">Go, touch some grass!</p>
+
+        
+    </div>
+    
+</body>
+
+</html>
