--- a/main.html
+++ b/main.html
@@ -12,15 +12,18 @@
     <link rel="stylesheet" href="index.css">
 </head>
 
-<body>
+<body style="background-color: #d7b375;">
     <div>
-        <h1>Welocme to furry page!</h1>
-        <p class="name">OwO</p>
+        <h1 style="color: whitesmoke;">Welocme to furry page!</h1>
+        <p class="furryinput" style="font: xx-small; color: whitesmoke">OwO</p>
 
-        <button onclick="Change()" onmouseenter="Enter()" onmouseleave="Leave()" class="magenta"
+        <button onclick="Change(this)" onmouseenter="Enter(this)" onmouseleave="Leave(this)" class="magenta"
             title="Fox!">Fur</button>
-        <button onclick="Change2()" onmouseenter="Enter2()" onmouseleave="Leave2()" class="gray" title="ЫЫааа.">Стать
-            фурри</button>
+
+        <button onclick="Change(this)" onmouseenter="Enter(this)" onmouseleave="Leave(this)" class="gray"
+            title="Yes.">Become
+            furry</button>
+            
     </div>
     <script src="index.js"></script>
 </body>
