Workspace management - some scripts renamed; - new contents; - code review.

--- a/main.html
+++ b/main.html
@@ -9,13 +9,15 @@
 
     <title>Furry</title>
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body style="background-color: #d7b375;">
     <div>
-        <h1 style="color: whitesmoke;">Welocme to furry page!</h1>
-        <p class="furryinput" style="font: xx-small; color: whitesmoke">OwO</p>
+        <h1 style="color: whitesmoke; font-style: normal; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"
+            align="center"><strong>Welocme to furry page!</strong></h1>
+        <p class="furryinput" style="font-style: normal; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: whitesmoke"
+            align="center"><i>uwu</i></p>
 
         <button onclick="Change(this)" onmouseenter="Enter(this)" onmouseleave="Leave(this)" class="magenta"
             title="Fox!">Fur</button>
@@ -23,9 +25,11 @@
         <button onclick="Change(this)" onmouseenter="Enter(this)" onmouseleave="Leave(this)" class="gray"
             title="Yes.">Become
             furry</button>
-            
+
     </div>
-    <script src="index.js"></script>
+
+    <script src="action.js"></script>
+
 </body>
 
 </html>
