Recognised site. - small changes

--- a/main.html
+++ b/main.html
@@ -16,14 +16,15 @@
     <div>
         <h1 style="color: whitesmoke; font-style: normal; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"
             align="center"><strong>Welocme to furry page!</strong></h1>
-        <p class="furryinput" style="font-style: normal; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: whitesmoke"
+        <p class="furryinput"
+            style="font-style: normal; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: whitesmoke"
             align="center"><i>uwu</i></p>
 
         <button onclick="Change(this)" onmouseenter="Enter(this)" onmouseleave="Leave(this)" class="magenta"
-            title="Fox!">Fur</button>
+            align="center" style="color: #ffffff" title="Fox!">Fur</button>
 
-        <button onclick="Change(this)" onmouseenter="Enter(this)" onmouseleave="Leave(this)" class="gray"
-            title="Yes.">Become
+        <button onclick="Change(this)" onmouseenter="Enter(this)" onmouseleave="Leave(this)" class="gray" align="center"
+            style="color: #ffffff" title="Yes.">Become
             furry</button>
 
     </div>
